<?xml version="1.0" encoding="UTF-8"?>
<project
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
    xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <groupId>org.nhind</groupId>
    <modelVersion>4.0.0</modelVersion>
    <artifactId>xd-common</artifactId>
    <name>NHIN Direct XD* Common Library</name>
    <version>9.0.0-SNAPSHOT</version>
    <description>Library for common XD* operations and objects</description>
    <inceptionYear>2010</inceptionYear>
    <url>https://github.com/DirectProjectJavaRI/xd-common</url>     
    <developers>
        <developer>
            <name>Vincent Lewis</name>
            <email>vincent.lewis@gsihealth.com</email>
        </developer>   
        <developer>
            <name>Beau Grantham</name>
            <email>bgrantha@harris.com</email>
        </developer>
        <developer>
            <name>Greg Meyer</name>
            <email>gmeyer@cerner.com</email>
        </developer>        
     </developers>     
    <licenses>
       <license>
          <name>New BSD License</name>
          <url>http://nhindirect.org/BSDLicense</url>
       </license>
    </licenses>
    <prerequisites>
        <maven>3.5.0</maven>
    </prerequisites>  	    
    <parent>
	   <groupId>org.springframework.boot</groupId>
	   <artifactId>spring-boot-dependencies</artifactId>
	   <version>3.5.0</version>
	   <relativePath />
    </parent> 
	<scm>
	     <url>https://github.com/DirectProjectJavaRI/xd-common.git</url>  
	     <connection>scm:hg:https://github.com/DirectProjectJavaRI/xd-common.git</connection>
	</scm> 	 
    <dependencies>    
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>             
        </dependency>	    
        <dependency>
            <groupId>org.nhind</groupId>
            <artifactId>config-service-client</artifactId>
            <version>9.0.0-SNAPSHOT</version>
            <scope>compile</scope>          
        </dependency>       
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>  	
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
        </dependency>     
		<dependency>
		  <groupId>jakarta.xml.ws</groupId>
		  <artifactId>jakarta.xml.ws-api</artifactId>
		</dependency>
        <dependency>
            <groupId>com.sun.xml.bind</groupId>
            <artifactId>jaxb-impl</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>com.sun.xml.messaging.saaj</groupId>
            <artifactId>saaj-impl</artifactId>
        </dependency>        		
 	    <dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter</artifactId>
		    <scope>test</scope>
	    </dependency>	    
        <dependency>
            <groupId>org.nhind</groupId>
            <artifactId>config-service-jar</artifactId>
            <version>9.0.0-SNAPSHOT</version>
            <scope>test</scope>
        </dependency>  	 
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-test</artifactId>
		    <scope>test</scope>
		</dependency>	
		<dependency>
		    <groupId>com.h2database</groupId>
		    <artifactId>h2</artifactId>
		    <scope>test</scope>
		</dependency>	
	    <dependency>
	       <groupId>io.r2dbc</groupId>
	       <artifactId>r2dbc-h2</artifactId>
	       <scope>test</scope>
	    </dependency>	    			        	       
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
            <resource>
                <directory>src/wsdl</directory>
                <includes>
                    <include>*.wsdl</include>
                </includes>
            </resource>
        </resources>

        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
            </testResource>
        </testResources>

        <extensions>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-webdav-jackrabbit</artifactId>
			</extension>
        </extensions>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <fork>true</fork>
                    <archive>
                        <index />
                    </archive>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>    
            <plugin>
                <groupId>com.sun.xml.ws</groupId>
                <artifactId>jaxws-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>wsimport</goal>
                        </goals>
                        <configuration>
                            <wsdlFiles>
                                <wsdlFile>XDS.b_DocumentRepositoryWSDLSynchMTOM.wsdl</wsdlFile>
                            </wsdlFiles>
                            <wsdlLocation>
                                /XDS.b_DocumentRepositoryWSDLSynchMTOM.wsdl
                            </wsdlLocation>
                            <staleFile>${project.build.directory}/jaxws/stale/XDS.b_DocumentRepositoryWSDLSynchMTOM.stale
                            </staleFile>
                        </configuration>
                        <id>wsimport-generate-XDS.b_DocumentRepositoryWSDLSynchMTOM</id>
                        <phase>generate-sources</phase>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>javax.xml.ws</groupId>
                        <artifactId>jaxws-api</artifactId>
                        <version>2.1</version>
                    </dependency>               
                 </dependencies>
                <configuration>
                    <sourceDestDir>${project.build.directory}/generated-sources/jaxws-wsimport
                    </sourceDestDir>
                    <xnocompile>true</xnocompile>
                    <verbose>true</verbose>
                    <extension>true</extension>
                    <catalog>${basedir}/src/jax-ws-catalog.xml</catalog>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jxr-plugin</artifactId>
            </plugin>
		    <plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-source-plugin</artifactId>
		        <executions>
		          <execution>
		            <goals>
		              <goal>jar</goal>
		            </goals>
		          </execution>
		        </executions>
		    </plugin>                
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
				    <additionalJOption>-Xdoclint:none</additionalJOption>
					<charset>UTF-8</charset>
					<docencoding>UTF-8</docencoding>
					<docfilessubdirs>true</docfilessubdirs>
					<detectJavaApiLink>true</detectJavaApiLink>
					<detectLinks>true</detectLinks>
					<source>17</source>
					<show>public</show>
                    <excludePackageNames>
                        org.nhindirect.xd.transform.parse.ccd.jaxb
                    </excludePackageNames>
                </configuration>
	            <executions>
	              <execution>
	                <phase>package</phase>
	                <id>attach-javadocs</id>
	                <goals>
	                  <goal>jar</goal>
	                </goals>
	              </execution>
	            </executions>	                 
            </plugin>
            <!-- for release only            
	        <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-gpg-plugin</artifactId>
               <executions>
                 <execution>
                  <id>sign-artifacts</id>
                     <phase>package</phase>
                     <goals>
                        <goal>sign</goal>
                     </goals>
                 </execution>
               </executions>
               <version>3.0.1</version>
            </plugin>  
             -->    
	        <plugin>
	          <groupId>org.sonatype.central</groupId>
	          <artifactId>central-publishing-maven-plugin</artifactId>
	          <version>0.8.0</version>
	          <extensions>true</extensions>
	          <configuration>
	            <publishingServerId>central</publishingServerId>
	          </configuration>
	        </plugin>    
        </plugins>             
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
				    <additionalJOption>-Xdoclint:none</additionalJOption>
					<charset>UTF-8</charset>
					<docencoding>UTF-8</docencoding>
					<docfilessubdirs>true</docfilessubdirs>
					<detectJavaApiLink>true</detectJavaApiLink>
					<detectLinks>true</detectLinks>
					<source>17</source>
					<show>public</show>
                    <excludePackageNames>
                        org.nhindirect.xd.transform.parse.ccd.jaxb
                    </excludePackageNames>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-pmd-plugin</artifactId>
                <configuration>
                    <targetJdk>17</targetJdk>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jxr-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>findbugs-maven-plugin</artifactId>
                <configuration>
                    <effort>Max</effort>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>taglist-maven-plugin</artifactId>
                <configuration>
                    <tags>
                        <tag>FIXME</tag>
                        <tag>TODO</tag>
                        <tag>WARN</tag>
                        <tag>@deprecated</tag>
                    </tags>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
</project>
